[gd_scene load_steps=31 format=3 uid="uid://cit2tnfxbaf1d"]

[ext_resource type="Script" uid="uid://cf41b8jt77c1x" path="res://Scripts/level_controller.gd" id="1_as5ey"]
[ext_resource type="Script" uid="uid://du4nb7uo66pv3" path="res://Scripts/rich_text_label.gd" id="2_6gwxm"]
[ext_resource type="Texture2D" uid="uid://c1mjxs2guq7vq" path="res://Images/Icons/not_colored_icon.png" id="3_1fo25"]
[ext_resource type="Texture2D" uid="uid://dkfxts27gad41" path="res://Images/Borders/border_paty.png" id="4_gqmsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35vm2"]
bg_color = Color(0.584314, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 3
shadow_offset = Vector2(-1.48, -0.17)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgg6v"]
bg_color = Color(0.607843, 1, 0.611765, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gyxq7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wscug"]
bg_color = Color(0.32549, 1, 0, 0.196078)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nftj"]
bg_color = Color(0.32549, 1, 0, 0.623529)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxx3b"]
bg_color = Color(0.0980392, 1, 0, 0.623529)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyxq7"]
bg_color = Color(0.32549, 1, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_xi3iv"]
resource_name = "LineEdit_glow"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnterPlayerPanel/LineEdit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.575), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7nftj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuestionPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestionPanel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClosingScenePanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wscug"]
resource_name = "back_to_main"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClosingScenePanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(90, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_gyxq7"]
resource_name = "next_question"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuestionPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 2), Vector2(-75, -50), Vector2(4, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestionPanel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_jgg6v"]
resource_name = "opening_scene"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClosingScenePanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(90, 0)]
}

[sub_resource type="Animation" id="Animation_vxx3b"]
resource_name = "prev_question"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("QuestionPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(4, 2), Vector2(-75, 50), Vector2(4, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("QuestionPanel:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxx3b"]
_data = {
&"LineEdit_glow": SubResource("Animation_xi3iv"),
&"RESET": SubResource("Animation_7nftj"),
&"back_to_main": SubResource("Animation_wscug"),
&"next_question": SubResource("Animation_gyxq7"),
&"opening_scene": SubResource("Animation_jgg6v"),
&"prev_question": SubResource("Animation_vxx3b")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7nftj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi3iv"]
bg_color = Color(0.32549, 1, 0, 0.196078)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ui5q"]
bg_color = Color(0, 0, 0, 0.882353)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxx3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytyi8"]
bg_color = Color(0.129412, 0.784314, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heb4q"]
bg_color = Color(0.0692797, 0.43562, 0.0968801, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4hge"]
bg_color = Color(0.129412, 0.784314, 0.188235, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wscug"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ah3cp"]
bg_color = Color(0.937255, 0, 0.215686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0a1o"]
bg_color = Color(0.464591, 0, 0.0867206, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc3ea"]
bg_color = Color(0.937255, 0, 0.215686, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7atl"]
bg_color = Color(0, 0, 0, 1)

[node name="ClassicLevel01" type="Node2D"]
script = ExtResource("1_as5ey")

[node name="QuestionPanel" type="Panel" parent="."]
offset_left = 4.0
offset_top = 2.0
offset_right = 86.0
offset_bottom = 47.0
theme_override_styles/panel = SubResource("StyleBoxFlat_35vm2")

[node name="DaresRichTextLabel" type="RichTextLabel" parent="QuestionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 6.0
offset_right = -3.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 1
text = "Готови!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_6gwxm")

[node name="DareTypePanel" type="Panel" parent="QuestionPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -1.0
offset_right = 20.0
offset_bottom = 5.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jgg6v")

[node name="DareTypeRichTextLabel" type="RichTextLabel" parent="QuestionPanel/DareTypePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 4
theme_override_font_sizes/italics_font_size = 4
theme_override_font_sizes/mono_font_size = 4
theme_override_font_sizes/normal_font_size = 4
theme_override_font_sizes/bold_font_size = 4
text = "Обща карта"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 90.0
offset_bottom = 160.0
color = Color(0.498039, 1, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color(0.498039, 1, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1fo25")
expand_mode = 1

[node name="NextButton" type="Button" parent="."]
offset_left = 26.0
offset_top = 56.0
offset_right = 81.0
offset_bottom = 72.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_gyxq7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wscug")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nftj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxx3b")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyxq7")
text = "Следващ >"
icon_alignment = 1

[node name="PrevButton" type="Button" parent="."]
offset_left = 9.0
offset_top = 56.0
offset_right = 23.0
offset_bottom = 72.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_gyxq7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wscug")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nftj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxx3b")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyxq7")
text = "<"
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vxx3b")
}

[node name="EnterPlayerPanel" type="Panel" parent="."]
offset_left = 5.0
offset_top = 3.0
offset_right = 85.0
offset_bottom = 149.0

[node name="ColorRect" type="ColorRect" parent="EnterPlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.8, 0, 1)

[node name="LineEdit" type="LineEdit" parent="EnterPlayerPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 7.0
offset_right = -2.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_7nftj")
max_length = 15

[node name="RichTextLabel" type="RichTextLabel" parent="EnterPlayerPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 60.0
offset_right = 76.0
offset_bottom = 126.0
theme_override_font_sizes/bold_italics_font_size = 7
theme_override_font_sizes/italics_font_size = 7
theme_override_font_sizes/mono_font_size = 7
theme_override_font_sizes/normal_font_size = 7
theme_override_font_sizes/bold_font_size = 7
bbcode_enabled = true

[node name="ErrorLabel" type="RichTextLabel" parent="EnterPlayerPanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 1.0
offset_right = 64.0
offset_bottom = 6.0
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_colors/font_selected_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/bold_italics_font_size = 3
theme_override_font_sizes/italics_font_size = 3
theme_override_font_sizes/mono_font_size = 3
theme_override_font_sizes/normal_font_size = 3
theme_override_font_sizes/bold_font_size = 3
bbcode_enabled = true
text = "
"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="EnterPlayerPanel"]
position = Vector2(40, 92.5)
scale = Vector2(0.208333, 0.131532)
texture = ExtResource("4_gqmsl")

[node name="AddPlayerButton" type="Button" parent="EnterPlayerPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 40.0
offset_right = 74.0
offset_bottom = 54.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_gyxq7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xi3iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nftj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxx3b")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyxq7")
text = "Добави играч!"
icon_alignment = 1

[node name="StartGameButton" type="Button" parent="EnterPlayerPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 130.0
offset_right = 74.0
offset_bottom = 144.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_gyxq7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xi3iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nftj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxx3b")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyxq7")
text = "Почваме!"
icon_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_right = 19.0
offset_bottom = 8.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_gyxq7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xi3iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nftj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vxx3b")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyxq7")
text = "< Назад"
icon_alignment = 1

[node name="ExitPanel" type="Panel" parent="."]
visible = false
offset_left = 6.0
offset_top = 19.0
offset_right = 84.0
offset_bottom = 61.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ui5q")

[node name="StayButton" type="Button" parent="ExitPanel"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
anchor_left = 0.064
anchor_top = 0.524
anchor_right = 0.462
anchor_bottom = 0.881
offset_left = 0.0079999
offset_top = -0.00800133
offset_right = -0.0359993
offset_bottom = -0.00200272
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxEmpty_vxx3b")
theme_override_styles/hover = SubResource("StyleBoxFlat_ytyi8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heb4q")
theme_override_styles/normal = SubResource("StyleBoxFlat_p4hge")
text = "Играй"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="ExitPanel"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
anchor_left = 0.551
anchor_top = 0.524
anchor_right = 0.949
anchor_bottom = 0.881
offset_left = 0.0219994
offset_top = -0.00800133
offset_right = -0.0220032
offset_bottom = -0.00200272
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxEmpty_wscug")
theme_override_styles/hover = SubResource("StyleBoxFlat_ah3cp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0a1o")
theme_override_styles/normal = SubResource("StyleBoxFlat_vc3ea")
text = "Изход"
icon_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="ExitPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.429
offset_bottom = -0.0180016
theme_override_font_sizes/bold_italics_font_size = 7
theme_override_font_sizes/italics_font_size = 7
theme_override_font_sizes/mono_font_size = 7
theme_override_font_sizes/normal_font_size = 7
theme_override_font_sizes/bold_font_size = 7
bbcode_enabled = true
text = "[b]Недей си ходи е!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClosingScenePanel" type="Panel" parent="."]
offset_right = 90.0
offset_bottom = 160.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w7atl")

[connection signal="button_down" from="BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_down" from="ExitPanel/StayButton" to="." method="_on_stay_button_button_down"]
[connection signal="button_down" from="ExitPanel/ExitButton" to="." method="_on_exit_button_button_down"]
